welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value Z
if (h==Z) 
       ^BDRBuggle:7: error: not found: value R
if (h==R)
       ^BDRBuggle:9: error: not found: value L
if (h==L)
       ^BDRBuggle:11: error: not found: value I
if (h==I)
       ^BDRBuggle:15: error: not found: value A
if (h==A)
       ^BDRBuggle:17: error: not found: value B
if (h==B)
       ^BDRBuggle:20: error: not found: value C
if (h==C)
       ^BDRBuggle:24: error: not found: value Y
if (h==Y)
       ^BDRBuggle:27: error: not found: value X
if (h==X)
       ^